@@ -5,6 +5,7 @@ import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.Profile;
 import org.springframework.http.HttpMethod;
+import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
@@ -25,6 +26,11 @@ import java.util.Base64;
  * - This is a stateless REST API using JWT tokens in Authorization headers
  * - No session cookies are used (stateless session management)
  * - CSRF attacks target cookie-based authentication, which this API doesn't use
+ *
+ * IMPORTANT: When adding public (permitAll) endpoints, you must ALSO add the same
+ * rule to the target service's SecurityConfig (e.g. event-management-service's
+ * SecurityConfig.java). Both the gateway AND the downstream service enforce auth
+ * independently. Forgetting the service-side rule causes 401 even if the gateway permits.
  */
 @Configuration
 @EnableWebSecurity
@@ -86,38 +92,54 @@ public class SecurityConfig {
         }
     }
 
-    /**
-     * CORS configuration bean
-     * Allows frontend (different origin: localhost:3000, staging.batbern.ch, etc.)
-     * to access API (localhost:8080, api.staging.batbern.ch)
+    /*
+     * ── CORS ownership ────────────────────────────────────────────────────────────────────
+     *
+     * PRODUCTION: CORS is an EDGE concern owned solely by the AWS API Gateway (HTTP API) in
+     * front of this service (ADR-008) — see infrastructure/lib/stacks/api-gateway-stack.ts
+     * `corsPreflight` (allowOrigins, allowMethods, allowHeaders, allowCredentials, exposeHeaders,
+     * maxAge). That edge answers the OPTIONS preflight AND adds the CORS response headers to
+     * every proxied response (incl. 4xx/5xx) for allowed origins. This gateway therefore does
+     * NOT configure CORS for prod (the `staging` profile has no `corsConfigurationSource` bean).
+     * To allow a new PROD origin (e.g. a canary subdomain), update the API Gateway `allowOrigins`
+     * only — do NOT add prod origins here. A previous implementation duplicated the prod allowlist
+     * here (+ a CorsHandler used by the rate-limit / Turnstile / account-active filters); that
+     * leftover was removed when CORS was consolidated to the edge.
+     *
+     * LOCAL DEV: there is NO API Gateway locally — the browser (Vite dev server on
+     * http://localhost:8100) calls this gateway directly on http://localhost:8000, so the gateway
+     * itself must answer CORS. The local-only `corsConfigurationSource` bean below does that —
+     * permissively (all origins; it is local-only). It is gated to the `local` + `dev` profiles:
+     * native dev (`scripts/dev/start-all-native.sh`) runs `local`, and `dev` is the bootRun
+     * default (`application.yml SPRING_PROFILES_ACTIVE:dev`). ECS runs the `staging` profile, so
+     * this bean never exists in prod and never competes with the API Gateway edge.
      */
     @Bean
+    @Profile({ "local", "dev" })
     public org.springframework.web.cors.CorsConfigurationSource corsConfigurationSource() {
         org.springframework.web.cors.CorsConfiguration configuration =
             new org.springframework.web.cors.CorsConfiguration();
-
-        // Allow specific origins
-        // For development: Allow any localhost port (multi-instance support)
-        // For production: Only allow specific domains
-        configuration.setAllowedOriginPatterns(java.util.Arrays.asList(
-            "http://localhost:*",      // Development: any port (e.g., 3000, 4000, 8600)
-            "http://127.0.0.1:*",      // Development: any port on 127.0.0.1
-            "https://staging.batbern.ch",
-            "https://www.batbern.ch"
+        // This is a deliberate MIRROR of the API Gateway `corsPreflight` in
+        // infrastructure/lib/stacks/api-gateway-stack.ts — KEEP THE TWO IN SYNC. Only the ORIGINS
+        // differ: prod's edge allowlists the batbern.ch domains, whereas locally there is no edge
+        // so we reflect ALL origins (any localhost port / 127.0.0.1 / LAN IP for mobile testing /
+        // custom hosts entry — dev-only bean, never in prod, so zero production impact). Methods,
+        // allowHeaders, exposeHeaders, credentials and maxAge are kept IDENTICAL on purpose: if
+        // the edge is missing a method or an exposed header, local dev fails the same way — so we
+        // catch CORS gaps here instead of only discovering them in prod.
+        configuration.setAllowedOriginPatterns(java.util.List.of("*"));
+        // Mirrors APIGW allowMethods (GET, POST, PUT, DELETE, PATCH, OPTIONS).
+        configuration.setAllowedMethods(java.util.List.of(
+            "GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"
         ));
-
-        configuration.setAllowedMethods(java.util.Arrays.asList(
-            "GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS", "HEAD"
-        ));
-        // Use wildcard to allow all headers (case-insensitive per RFC 7230)
-        // Prevents issues with case variations (x-correlation-id vs X-Correlation-ID)
+        // Mirrors APIGW allowHeaders: ['*'] (case-insensitive per RFC 7230).
         configuration.addAllowedHeader("*");
-        configuration.setExposedHeaders(java.util.Arrays.asList(
-            "X-Request-Id",
-            "X-Correlation-ID",
-            "X-Rate-Limit-Remaining",
-            "X-Rate-Limit-Reset"
+        // Mirrors APIGW exposeHeaders — the SPA reads X-Correlation-ID off responses (~8 places).
+        configuration.setExposedHeaders(java.util.List.of(
+            "X-Correlation-ID", "X-Request-Id",
+            "X-RateLimit-Limit", "X-RateLimit-Remaining", "X-RateLimit-Reset"
         ));
+        // Mirrors APIGW allowCredentials + maxAge (1 hour).
         configuration.setAllowCredentials(true);
         configuration.setMaxAge(3600L);
 
@@ -138,8 +160,11 @@ public class SecurityConfig {
         return http
                 // CSRF not needed for stateless JWT API with header-based auth
                 .csrf(AbstractHttpConfigurer::disable)
-                // Enable CORS for cross-origin requests (frontend on different port/subdomain)
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                // Uses the `corsConfigurationSource` bean IF present — i.e. ONLY under the local
+                // dev profiles (`local`/`dev`). In prod (`staging` profile) no such bean exists,
+                // so this is a no-op and CORS is owned solely by the API Gateway edge (ADR-008).
+                // See the CORS-ownership note above.
+                .cors(Customizer.withDefaults())
                 // Stateless session - no cookies, no CSRF risk
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(auth -> auth
@@ -164,8 +189,11 @@ public class SecurityConfig {
         return http
                 // CSRF not needed for stateless JWT API with header-based auth
                 .csrf(AbstractHttpConfigurer::disable)
-                // Enable CORS for cross-origin requests (frontend on different port/subdomain)
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                // Uses the `corsConfigurationSource` bean IF present — i.e. ONLY under the local
+                // dev profiles (`local`/`dev`). In prod (`staging` profile) no such bean exists,
+                // so this is a no-op and CORS is owned solely by the API Gateway edge (ADR-008).
+                // See the CORS-ownership note above.
+                .cors(Customizer.withDefaults())
                 // Stateless session - no cookies, no CSRF risk
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(auth -> auth
@@ -173,6 +201,10 @@ public class SecurityConfig {
                         .requestMatchers("/actuator/health").permitAll()
                         // Other actuator endpoints require auth (metrics, info, prometheus expose internals)
                         .requestMatchers("/actuator/**").authenticated()
+                        // ServiceHealthController: proxy health/info of downstream services via Service Connect.
+                        // Used by post-deploy smoke tests; only exposes UP/DOWN, no internal metrics.
+                        .requestMatchers(HttpMethod.GET, "/services/*/health").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/services/*/info").permitAll()
                         .requestMatchers("/api/v1/config").permitAll()
 
                         // Story 4.1.3: Public event discovery endpoints (no auth required)
@@ -193,10 +225,6 @@ public class SecurityConfig {
 
                         // Story 1.15a.1b: Public speaker list endpoint (GET only, POST/DELETE require ORGANIZER)
                         .requestMatchers(HttpMethod.GET, "/api/v1/events/*/sessions/*/speakers").permitAll()
-
-                        // SpeakerController: public read endpoints (speaker directory)
-                        .requestMatchers(HttpMethod.GET, "/api/v1/speakers").permitAll()
-                        .requestMatchers(HttpMethod.GET, "/api/v1/speakers/*").permitAll()
 
                         // Story 5.9: Public materials download endpoint for archived events
                         .requestMatchers(HttpMethod.GET, "/api/v1/events/*/sessions/*/materials/*/download").permitAll()
@@ -226,6 +254,13 @@ public class SecurityConfig {
                         // Public organizers endpoint for About page
                         .requestMatchers(HttpMethod.GET, "/api/v1/public/organizers").permitAll()
 
+                        // Story 11.C.1: Public user-portrait endpoint (replaces deleted /api/v1/speakers/{username})
+                        // CUMS PublicUserController. Filters to SPEAKER role only.
+                        .requestMatchers(HttpMethod.GET, "/api/v1/public/users/*").permitAll()
+
+                        // Global teaser images: public list for presenter view (_global = all events)
+                        .requestMatchers(HttpMethod.GET, "/api/v1/events/_global/teaser-images").permitAll()
+
                         // Story 10.8a: Public presentation settings (moderator page)
                         .requestMatchers(HttpMethod.GET, "/api/v1/public/settings/presentation").permitAll()
 
@@ -233,35 +268,28 @@ public class SecurityConfig {
                         .requestMatchers(HttpMethod.GET, "/api/v1/public/settings/features").permitAll()
 
                         // Story 6.1a/6.2a/6.2b: Speaker portal endpoints (token-protected, no JWT auth)
+                        // Story 11.C.1: profile endpoints removed (controller deleted, frontend tear-down in Phase F)
                         .requestMatchers(HttpMethod.POST, "/api/v1/speaker-portal/validate-token").permitAll()
                         .requestMatchers(HttpMethod.POST, "/api/v1/speaker-portal/respond").permitAll()
-                        .requestMatchers(HttpMethod.GET, "/api/v1/speaker-portal/profile").permitAll()
-                        .requestMatchers(HttpMethod.PATCH, "/api/v1/speaker-portal/profile").permitAll()
-                        .requestMatchers(HttpMethod.POST,
-                                "/api/v1/speaker-portal/profile/photo/presigned-url").permitAll()
-                        .requestMatchers(HttpMethod.POST, "/api/v1/speaker-portal/profile/photo/confirm").permitAll()
 
                         // Story 6.4: Speaker dashboard endpoint (token-protected, no JWT auth)
                         .requestMatchers(HttpMethod.GET, "/api/v1/speaker-portal/dashboard").permitAll()
 
-                        // Story 6.3: Speaker content submission endpoints (token-protected, no JWT auth)
-                        .requestMatchers(HttpMethod.GET, "/api/v1/speaker-portal/content").permitAll()
-                        .requestMatchers(HttpMethod.POST, "/api/v1/speaker-portal/content/draft").permitAll()
-                        .requestMatchers(HttpMethod.POST, "/api/v1/speaker-portal/content/submit").permitAll()
-                        .requestMatchers(HttpMethod.POST,
-                                "/api/v1/speaker-portal/materials/presigned-url").permitAll()
-                        .requestMatchers(HttpMethod.POST, "/api/v1/speaker-portal/materials/confirm").permitAll()
-
-                        // Story 9.1: Speaker JWT magic link authentication endpoint (JWT-protected, no Cognito auth)
-                        .requestMatchers(HttpMethod.POST, "/api/v1/auth/speaker-magic-login").permitAll()
-
-                        // Story 6.3: E2E test endpoints (controller only active in dev/test profiles)
-                        .requestMatchers("/api/v1/e2e-test/**").permitAll()
+                        // Story 11.E.3 / 11.F.1: /api/v1/speaker-portal/** is Cognito-secured
+                        // via @PreAuthorize("hasRole('SPEAKER')") in EMS. The previous permitAll
+                        // matchers (content GET/draft/submit + materials presigned-url/confirm) and
+                        // the magic-link surface (/api/v1/auth/speaker-magic-login + /api/v1/e2e-test/**)
+                        // were removed in Story 11.F.1.
 
                         // Story 10.7: Newsletter public endpoints (subscribe + token-based unsubscribe)
                         .requestMatchers(HttpMethod.POST, "/api/v1/newsletter/subscribe").permitAll()
                         .requestMatchers(HttpMethod.GET, "/api/v1/newsletter/unsubscribe/verify").permitAll()
                         .requestMatchers(HttpMethod.POST, "/api/v1/newsletter/unsubscribe").permitAll()
+
+                        // Additional-email verification (v2): public token-credentialed verify
+                        // endpoints (GET-check / POST-confirm). The token IS the credential.
+                        .requestMatchers(HttpMethod.GET, "/api/v1/users/additional-emails/verify").permitAll()
+                        .requestMatchers(HttpMethod.POST, "/api/v1/users/additional-emails/verify").permitAll()
 
                         // Story 10.12: Self-service deregistration (token-protected)
                         .requestMatchers(HttpMethod.GET, "/api/v1/registrations/deregister/verify").permitAll()
@@ -272,6 +300,18 @@ public class SecurityConfig {
                         .requestMatchers(HttpMethod.POST, "/api/v1/watch/pair").permitAll()
                         // W2.2: Watch JWT auth — unauthenticated (exchanges pairing token for JWT; must be permit-all)
                         .requestMatchers(HttpMethod.POST, "/api/v1/watch/authenticate").permitAll()
+
+                        // Story 10.26: Internal Lambda forwarder endpoints (VPC-only, no JWT needed)
+                        // Safe: Spring Boot API Gateway is only reachable within VPC (Service Connect);
+                        // external traffic is authenticated by AWS API Gateway's Cognito authorizer.
+                        .requestMatchers(HttpMethod.GET, "/api/v1/users").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/api/v1/events/*/registrations").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/api/v1/admin/settings/*").permitAll()
+                        // Spec auto-participant-email-aliases-excel-export (F2): per-event
+                        // distribution-list resolver for batbern{N}-speaker@ +
+                        // batbern{N}-moderator@. Same VPC-only forwarder pattern.
+                        .requestMatchers(HttpMethod.GET,
+                                "/api/v1/events/*/distribution-list/*").permitAll()
 
                         // All other requests require authentication (including Watch organizer endpoints,
                         // which are validated by the composite JwtDecoder below)
